--- a/Smart-Study-Dashboard/package.json
+++ b/Smart-Study-Dashboard/package.json
@@ -17,7 +17,8 @@
     "@fortawesome/react-fontawesome": "^3.0.2",
     "framer-motion": "^12.23.18",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "recharts": "^3.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
